Login_Registeration_Home_Image _Changed

--- a/FrontEnd/src/Entry_Pages/Login.css
+++ b/FrontEnd/src/Entry_Pages/Login.css
@@ -1,6 +1,6 @@
 /* Styling for the background */
 #Top_Div {
-    background: linear-gradient(to bottom right, #9974c1, #7d97c4); /* New background gradient */
+    background: linear-gradient(to bottom right, #511593, #7d97c4); /* New background gradient */
     background-size: cover;
     background-position: center;
     height: 100vh;
