--- a/FrontEnd/src/Middle_Page/MiddleSection.css
+++ b/FrontEnd/src/Middle_Page/MiddleSection.css
@@ -1,10 +1,5 @@
 /* Container with gradient background */
-.container {
-    background: linear-gradient(45deg, #6a11cb, #2575fc); /* Gradient background */
-    border-radius: 15px;
-    padding: 30px;
-    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); /* Soft shadow */
-  }
+
   
   /* Main section for buttons */
   .Div_Section {
@@ -12,7 +7,10 @@
     flex-wrap: wrap;
     justify-content:space-between;
     gap: 15px;
-    padding: 10px;
+    padding: 20px;
+    margin:10px;
+    background-color:rgba(165, 187, 179, 0.436);
+    border-radius:10px;
   }
   
   /* Individual buttons */
@@ -20,11 +18,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background: linear-gradient(135deg, #c2a67a, #587f7f98);
     color: #222;
     padding: 12px 25px;
     margin: 8px;
-    border-radius: 30px; /* Rounded corners */
+    border-radius: 10px;
     font-size: 18px;
     font-weight: 600;
     text-decoration: none;
@@ -32,17 +30,18 @@
     transition: all 0.4s ease;
     border: 2px solid transparent;
     position: relative;
-    box-shadow: 0px 4px 12px rgba(7, 217, 158, 0.874); /* Slight shadow for depth */
-  }
+    scroll-behavior: smooth;
+    box-shadow: 0px 4px 12px rgba(13, 19, 18, 0.874);
+    
+}
   
-  /* Hover effect with glowing neon effect */
-  .Sub_Div:hover {
-    color: #fff;
-    background-color: #6393e7; /* Change background color */
-    border: 1px solid #fff;
-    transform: scale(1.05); /* Slightly grow the button */
-    box-shadow: 0px 0px 0px rgba(195, 174, 174, 0.2); /* Stronger shadow */
-  }
+.Sub_Div:hover {
+  color: #fff; /* Text color on hover */
+  background-color: rgba(34, 66, 101, 0.589); /* Background color on hover */
+  border: 2px solid #fff; /* Border color on hover */
+  transform: scale(1.05); /* Slightly scale the element */
+  box-shadow: 0px 0px 10px 2px rgba(93, 150, 211, 0.7); /* Glowing effect */
+}
   
  
   
@@ -54,9 +53,8 @@
       display:flex;
       flex-direction: row;
      position:relative;
-     top:90px;
-
-      font-size: 10px;
+     
+     font-size: 10px;
       padding: 5px;
     }
   }
