--- a/FrontEnd/src/Entry_Pages/Login.css
+++ b/FrontEnd/src/Entry_Pages/Login.css
@@ -94,7 +94,7 @@ input:focus {
 
 
 
-button:hover {
+#Login_btn:hover {
     background: linear-gradient(to right, #966cdd, #706bff);
     transform: scale(1.1);
     box-shadow: 0px 5px 15px rgba(255, 71, 87, 0.5);
